@@ -15,14 +15,14 @@ public class ConvertListTest {
         List<int[]> in = new ArrayList<>();
         in.add(new int[] {1});
         in.add(new int[] {2, 3});
-        List<Integer> expect = Arrays.asList(1, 2, 3);
+        List<Integer> expect = List.of(1, 2, 3);
         assertThat(ConvertList.convert(in), is(expect));
     }
 
     @Test
     public void whenTwoZeroList() {
         List<int[]> in = new ArrayList<>();
-        List<Integer> expect = Arrays.asList();
+        List<Integer> expect = List.of();
         assertThat(ConvertList.convert(in), is(expect));
     }
 }
